--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-        <meta name="referrer" content="no-referrer">
-        <meta http-equiv="Cache-Control" content="no-cache">
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, user-scalable=no"
+        />
+        <meta name="referrer" content="no-referrer" />
+        <meta http-equiv="Cache-Control" content="no-cache" />
 
         <title>VRCX</title>
+
+        <!-- <link rel="stylesheet" href="app.css" /> -->
 
         <link rel="preconnect" href="https://api.vrchat.cloud" />
         <link rel="preconnect" href="https://files.vrchat.cloud" />
@@ -15,5 +20,6 @@
     </head>
     <body>
         <div id="root"></div>
+        <script type="module" src="/src/app.js"></script>
     </body>
 </html>
