--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="/src/app.js"></script>
+        <script type="module" src="app.js"></script>
     </body>
 </html>
